// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms / DateTime DateTime 1`] = `
.c0 {
  color: #282823;
}

<span
  className="c0"
>
  <time>
    1/18/1970, 23:53
  </time>
</span>
`;

exports[`Storyshots Atoms / DateTime Invalid value 1`] = `
.c0 {
  color: #282823;
}

<span
  className="c0"
>
  -
</span>
`;

exports[`Storyshots Atoms / DateTime Uses custom symbol for invalid value 1`] = `
.c0 {
  color: #282823;
}

<span
  className="c0"
>
  X
</span>
`;

exports[`Storyshots Atoms / DateTime With custom formatting options 1`] = `
.c0 {
  color: #282823;
}

<span
  className="c0"
>
  <time>
    Thu, Nov 11, 1999
  </time>
</span>
`;

exports[`Storyshots Atoms / DateTime With date as ISO 8601 string 1`] = `
.c0 {
  color: #282823;
}

<span
  className="c0"
>
  <time>
    11/11/1999
  </time>
</span>
`;

exports[`Storyshots Atoms / DateTime With date only 1`] = `
.c0 {
  color: #282823;
}

<span
  className="c0"
>
  <time>
    1/18/1970
  </time>
</span>
`;

exports[`Storyshots Atoms / DateTime With date time as ISO 8601 string 1`] = `
.c0 {
  color: #282823;
}

<span
  className="c0"
>
  <time>
    11/11/1999, 10:11
  </time>
</span>
`;
